XPS peak fitting

--- a/nm and eV axes.ipynb
+++ b/nm and eV axes.ipynb
@@ -177,7 +177,7 @@
        "b08ilosUAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1056366d0>"
+       "<matplotlib.figure.Figure at 0x1054f7690>"
       ]
      },
      "metadata": {},
@@ -192,9 +192,9 @@
     "def tick_function(X):\n",
     "    V = 1240/X\n",
     "    return [\"%.2f\" % z for z in V]\n",
-    "ax2.set_xticks(new_tick_locations)\n",
-    "ax1.set_xticks(new_tick_locations)\n",
-    "ax2.set_xticklabels(tick_function(new_tick_locations))\n",
+    "ax2.set_xticks(nm_tick_locations)\n",
+    "ax1.set_xticks(nm_tick_locations)\n",
+    "ax2.set_xticklabels(tick_function(nm_tick_locations))\n",
     "\n",
     "ax1.set_yticks([])\n",
     "ax1.set_xlim([200,2000])\n",
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -318,7 +318,7 @@
        "SZIkSR1hgSZJkiRJHfH/AAXq9UwX/fuFAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x105d23390>"
+       "<matplotlib.figure.Figure at 0x105649f10>"
       ]
      },
      "metadata": {},
